# notam_praser

./: .env.example  .gitignore  Makefile  NOTAM_PARSER_REPORT.md  README.md  TEST_ENHANCEMENT_REPORT.md  main.py  pyproject.toml  pytest.ini  requirements.txt
datas/: input_notams.csv
plans/: 01-office-hours-design.md  02-implementation-plan.md
src/: __init__.py  config.py  database.py  main.py
src/api/: __init__.py  models.py  routes.py
src/parsers/: __init__.py  confidence_calculator.py  llm_parser.py  qcode_database.py  regex_parser.py  terminology_db.py
tests/: conftest.py  test_api.py  test_confidence.py  test_database.py  test_edge_cases.py  test_integration.py  test_json_schema.py  test_llm_integration.py  test_llm_parser.py  test_qcode_coverage.py  test_regex_parser.py  test_terminology_db.py
tests/utils/: __init__.py  llm_test_helper.py  notam_data_loader.py
