[project]
name = "notam-parser"
version = "0.1.0"
description = "NOTAM Parser - ICAO standard format parser with LLM semantic analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.10.0",
    "httpx>=0.26.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]
